[tool.poetry]
name = "banking-application"
version = "0.1.0"
description = ""
authors = ["старченко дмитрий <starchenko.dmitr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openpyxl = "^3.1.5"
pandas = "^2.3.2"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
pytest = "^8.4.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.18.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
